# quantafuel-mqtt-extractor

./: .gitignore  Dockerfile  README.md  pyproject.toml
Kognifai/: Serialization_pb2.py
Kognifai/Serialization/: Asset_pb2.py  Basetypes_pb2.py  Dataframe_pb2.py  Edgegateway_pb2.py  Events_pb2.py  Timeseries_pb2.py
config/: config.yaml  config_local.yaml
mqtt_extractor/: kchief.py  main.py  viridor.py
tests/: cdf.json  kchief_message_CloudBoundContainer.proto  kchief_parser.py  mqtt_data.txt  publish_cdf.py  publish_kchief.py  publish_viridor.py  test_cdf.py  test_main.py  test_viridor.py
